# rust-auth

./: Cargo.toml
src/: main.rs
src/models/: user_model.rs
src/repository/: mongodb_repo.rs
src/routes/: auth.rs
