[package]
name = "janix-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rand_core = { version = "0.6", features = ["std"] }
serde = "1.0.152"
dotenv = "0.15.0"
argon2 = "0.4.1"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["sync"] 
